--- a/data/tmpl/user_secret.yaml.j2
+++ b/data/tmpl/user_secret.yaml.j2
@@ -1,5 +1,5 @@
 ---
-{% for sec_conf in sec_confs %}{% set loop_sec_conf = loop %}- path: secret/user/{{ username }}{% if sec_conf.path is not none %}/{{ sec_conf.path }}{% endif %}
+{% for sec_conf in sec_confs %}{% set loop_sec_conf = loop %}- path: secret/user/{{ user_name }}{% if sec_conf.path is not none %}/{{ sec_conf.path }}{% endif %}
   secrets:
 {% for item in sec_conf.secrets | dictsort %}{% set loop_secret = loop %}    {{ item[0] }}: {{ item[1] }}{% if not loop_secret.last %}
 {% endif %}{% endfor %}
