[#7]: add missing sec confs; debug script and template

--- a/data/tmpl/service_secret.yaml.j2
+++ b/data/tmpl/service_secret.yaml.j2
@@ -1,7 +1,5 @@
 ---
-{% for sec_conf in sec_confs %}{% set loop_sec_conf = loop %}- path: secret/service/{{ sec_conf.path }}
+- path: secret/service/{{ path }}
   secrets:
-{% for item in sec_conf.secrets | dictsort %}{% set loop_secret = loop %}    {{ item[0] }}: {{ item[1] }}{% if not loop_secret.last %}
-{% endif %}{% endfor %}
-{% if not loop_sec_conf.last %}
+{% for item in secrets | dictsort %}{% set loop_secret = loop %}    {{ item[0] }}: {{ item[1] }}{% if not loop_secret.last %}
 {% endif %}{% endfor %}
