--- a/data/tmpl/service_secret.yaml.j2
+++ b/data/tmpl/service_secret.yaml.j2
@@ -1,5 +1,5 @@
 ---
-- path: secret/service/{{ path }}
+- path: secret/{{ path }}
   secrets:
 {% for item in secrets | dictsort %}{% set loop_secret = loop %}    {{ item[0] }}: {{ item[1] }}{% if not loop_secret.last %}
 {% endif %}{% endfor %}
