[#21]: align BashLib, DockerTools & VaultTools boilerplate code & files

--- a/cicd/data/tmpl/dd-vault-tools.rb.j2
+++ b/cicd/data/tmpl/dd-vault-tools.rb.j2
@@ -7,7 +7,7 @@
 # created : 2019-03-31
 
 
-# see also dd-bash-lib.rb
+# see also dd-bash-lib.rb and dd-docker-tools.rb.j2
 
 
 class DdVaultTools < Formula
@@ -16,23 +16,18 @@ class DdVaultTools < Formula
   url      "{{ archive_url }}"
   sha256   "{{ sha256_sum }}"
 
-  # TODO: these are only required for CI/CD test / upload / etc. scripts
+  # NOTE: only req'd for CI/CD
   # req'd for realpath, sha256sum
-  depends_on "coreutils"
-  depends_on "jinja2-cli"
+  # depends_on "coreutils"
+  # depends_on "jinja2-cli"
 
   # required to update default bash 3 to version 4 (or 5)
-  # TODO: introduce convention if this should be listed here:
-  # dd-bash-lib lists latest bash as dependency, but scripts
-  # of this project also make use of bash 4+ features, e.g. arrays
   depends_on "bash"
   depends_on "desmodyne/tools/dd-bash-lib"
   depends_on "jq"
   depends_on "vault"
   depends_on "yq"
 
-  # https://github.com/Homebrew/brew/blob/master/ ...
-  #  ... docs/Formula-Cookbook.md#just-moving-some-files
   def install
     bin.install Dir["code/bin/*"]
   end
