[#22]: refactor dd-vt-configure-vault to dd-vt-conf-vault

--- a/code/tmpl/dd-vt-conf-vault.yaml.j2
+++ b/code/tmpl/dd-vt-conf-vault.yaml.j2
@@ -1,7 +1,7 @@
 ---
-# dd-vt-configure-vault.yaml, rendered from dd-vt-configure-vault.yaml.j2
+# dd-vt-conf-vault.yaml, rendered from dd-vt-conf-vault.yaml.j2
 #
-# dd-vt-configure-vault script configuration file
+# dd-vt-conf-vault script configuration file
 #
 # author  : stefan schablowski
 # contact : stefan.schablowski@desmodyne.com
