[#22]: add script to download secrets: committing to git still due

--- a/code/tmpl/dd-vt-download-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-download-secrets.yaml.j2
@@ -1,24 +1,31 @@
 ---
-# dd-vt-conf-vault.yaml, rendered from dd-vt-conf-vault.yaml.j2
+# dd-vt-download-secrets.yaml, rendered from dd-vt-download-secrets.yaml.j2
 #
-# dd-vt-conf-vault script configuration file
+# dd-vt-download-secrets script configuration file
 #
 # author  : stefan schablowski
 # contact : stefan.schablowski@desmodyne.com
-# created : 2020-06-15
+# created : 2020-06-16
 
 
 # TODO: see ./dd-vt-init-vault.yaml.j2
 
 
-# path to vault log file on its host
-path_to_log_file:  {{ path_to_log_file }}
-
 # absolute path to secure location with sensitive data for this vault
 path_to_sec_loc:   {{ path_to_sec_loc }}
+
+# path to folder with secrets config files, relative to path_to_sec_loc
+secrets_folder:    {{ secrets_folder }}
 
 # name of file with keys to unseal vault, relative to path_to_sec_loc
 key_file_name:     {{ key_file_name }}
 
 # vault server protocol, host and port
 vault_address:     {{ vault_address }}
+
+# secrets engines endpoints
+# https://www.vaultproject.io/api-docs/secret
+endpoints:
+{%- for endpoint in endpoints %}
+- {{ endpoint }}
+{%- endfor %}
