[#22]: add any changes to secrets files to git repo and commit

--- a/code/tmpl/dd-vt-download-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-download-secrets.yaml.j2
@@ -29,3 +29,7 @@ endpoints:
 {%- for endpoint in endpoints %}
 - {{ endpoint }}
 {%- endfor %}
+
+# git commit message
+# TODO: add meta data: vault info, script version info
+commit_msg: add / update secrets downloaded from vault
