[#22]: get git commit messages from conf

--- a/code/tmpl/dd-vt-init-vault.yaml.j2
+++ b/code/tmpl/dd-vt-init-vault.yaml.j2
@@ -18,6 +18,9 @@ path_to_sec_loc:   {{ path_to_sec_loc }}
 # name of file with keys to unseal vault, relative to path_to_sec_loc
 key_file_name:     {{ key_file_name }}
 
+# message for committing new init file to git
+git_msg:           {{ git_msg }}
+
 # https://www.vaultproject.io/api/system/init.html#parameters
 
 # number of shares to split the master key into
