--- a/code/tmpl/dd-vt-unseal-vault.yaml.j2
+++ b/code/tmpl/dd-vt-unseal-vault.yaml.j2
@@ -20,5 +20,8 @@ key_file_name:     {{ key_file_name }}
 # name of file with vault UUID and status info, relative to path_to_sec_loc
 info_file_name:    {{ info_file_name }}
 
+# message for committing new info file to git
+git_msg:           {{ git_msg }}
+
 # vault server protocol, host and port
 vault_address:     {{ vault_address }}
