[#22]: deal with no secrets being configured

--- a/code/tmpl/dd-vt-upload-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-upload-secrets.yaml.j2
@@ -37,8 +37,8 @@ vault_path:        {{ vault_path }}
 #         relative to vault_address/vault_path
 #   file: path to and name of file with secrets,
 #         relative to path_to_sec_loc/secrets_folder
-secrets:
+secrets:           {% if secrets is defined  and secrets %}
 {%- for secret in secrets %}
 - path: {{ secret.path }}
   file: {{ secret.file }}
-{%- endfor %}
+{%- endfor %}{% else %}null{% endif %}
