[#22]: rename vault_address to vault_host, better matches its purpose

--- a/code/tmpl/dd-vt-init-vault.yaml.j2
+++ b/code/tmpl/dd-vt-init-vault.yaml.j2
@@ -37,4 +37,4 @@ secret_shares:     {{ secret_shares }}
 secret_threshold:  {{ secret_threshold }}
 
 # vault server protocol, host and port
-vault_address:     {{ vault_address }}
+vault_host:        {{ vault_host }}
