--- a/code/tmpl/dd-vt-unseal-vault.yaml.j2
+++ b/code/tmpl/dd-vt-unseal-vault.yaml.j2
@@ -31,4 +31,4 @@ git_msg_lines:
   {%- endfor %}
 
 # vault server protocol, host and port
-vault_address:     {{ vault_address }}
+vault_host:        {{ vault_host }}
