--- a/code/tmpl/dd-vt-download-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-download-secrets.yaml.j2
@@ -21,7 +21,7 @@ secrets_folder:    {{ secrets_folder }}
 key_file_name:     {{ key_file_name }}
 
 # vault server protocol, host and port
-vault_address:     {{ vault_address }}
+vault_host:        {{ vault_host }}
 
 # secrets engines endpoints
 # https://www.vaultproject.io/api-docs/secret
