--- a/code/tmpl/dd-vt-seal-vault.yaml.j2
+++ b/code/tmpl/dd-vt-seal-vault.yaml.j2
@@ -18,4 +18,4 @@ path_to_sec_loc:   {{ path_to_sec_loc }}
 key_file_name:     {{ key_file_name }}
 
 # vault server protocol, host and port
-vault_address:     {{ vault_address }}
+vault_host:        {{ vault_host }}
