--- a/code/tmpl/dd-vt-upload-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-upload-secrets.yaml.j2
@@ -21,9 +21,9 @@ secrets_folder:    {{ secrets_folder }}
 key_file_name:     {{ key_file_name }}
 
 # vault server protocol, host and port
-vault_address:     {{ vault_address }}
+vault_host:        {{ vault_host }}
 
-# vault url path to secrets, relative to vault_address
+# vault url path to secrets, relative to vault_host
 # TODO: support other secrets engines than cubbyhole
 vault_path:        {{ vault_path }}
 
@@ -34,7 +34,7 @@ vault_path:        {{ vault_path }}
 # https://www.vaultproject.io/api/secret/cubbyhole/index.html
 # properties:
 #   path: path into vault where the secret will be stored,
-#         relative to vault_address/vault_path
+#         relative to vault_host/vault_path
 #   file: path to and name of file with secrets,
 #         relative to path_to_sec_loc/secrets_folder
 secrets:           {% if secrets is defined  and secrets %}
