[#22]: rename vault_path to vault_root, better matches its purpose

--- a/code/tmpl/dd-vt-upload-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-upload-secrets.yaml.j2
@@ -25,7 +25,7 @@ vault_host:        {{ vault_host }}
 
 # vault url path to secrets, relative to vault_host
 # TODO: support other secrets engines than cubbyhole
-vault_path:        {{ vault_path }}
+vault_root:        {{ vault_root }}
 
 # secrets to be uploaded to vault
 # NOTE: currently, all secrets are stored in cubbyhole:
@@ -34,7 +34,7 @@ vault_path:        {{ vault_path }}
 # https://www.vaultproject.io/api/secret/cubbyhole/index.html
 # properties:
 #   path: path into vault where the secret will be stored,
-#         relative to vault_host/vault_path
+#         relative to vault_host/vault_root
 #   file: path to and name of file with secrets,
 #         relative to path_to_sec_loc/secrets_folder
 secrets:           {% if secrets is defined  and secrets %}
