[#22]: rewrite script and conf to upload secrets

--- a/code/tmpl/dd-vt-upload-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-upload-secrets.yaml.j2
@@ -14,27 +14,23 @@
 # absolute path to secure location with sensitive data for this vault
 path_to_sec_loc:   {{ path_to_sec_loc }}
 
-# path to folder with secrets config files, relative to path_to_sec_loc
-secrets_folder:    {{ secrets_folder }}
-
 # name of file with keys to unseal vault, relative to path_to_sec_loc
 key_file_name:     {{ key_file_name }}
 
 # vault server protocol, host and port
 vault_host:        {{ vault_host }}
 
+
+# path to folder with secrets config files, relative to path_to_sec_loc
+secrets_folder:    {{ secrets_folder }}
+
 # vault url path to secrets, relative to vault_host
-# TODO: support other secrets engines than cubbyhole
-vault_root:        {{ vault_root }}
+secrets_root:      {{ secrets_root }}
 
 # secrets to be uploaded to vault
-# NOTE: currently, all secrets are stored in cubbyhole:
-# https://learn.hashicorp.com/vault/getting-started/secrets-engines
-# https://www.vaultproject.io/docs/secrets/cubbyhole/index.html
-# https://www.vaultproject.io/api/secret/cubbyhole/index.html
 # properties:
 #   path: path into vault where the secret will be stored,
-#         relative to vault_host/vault_root
+#         relative to vault_host/secrets_root
 #   file: path to and name of file with secrets,
 #         relative to path_to_sec_loc/secrets_folder
 secrets:           {% if secrets is defined  and secrets %}
