[#22]: get differences between auth methods from conf;
pass entire conf to both enable-* and set-up-* functions;
also refactor injecting methods_folder and methods_root (common to all
auth methods), i.e. prepending it to folder/url path from code to tmpl

--- a/code/tmpl/dd-vt-upload-auth-methods.yaml.j2
+++ b/code/tmpl/dd-vt-upload-auth-methods.yaml.j2
@@ -32,8 +32,11 @@ methods_root:      {{ methods_root }}
 methods:           {% if methods is defined and methods %}
 {% for method in methods %}
   {{ method.method_name }}:
-    method_folder: {{ method.method_folder }}
-    method_root:   {{ method.method_root }}{% if method.roles is defined %}
+    description: {{ method.description }}
+    folder:      {{ methods_folder }}/{{ method.folder }}
+    root_conf:   {{ methods_root }}/{{ method.root_conf }}
+    root_enable: {{ method.root_enable }}
+    type:        {{ method.type }}{% if method.roles is defined %}
     roles:{% if method.roles %}
     {% for role in method.roles %}- path: {{ role.path }}
       file: {{ role.file }}{% endfor %}{% else %}         null{% endif %}{% endif %}{% if method.users is defined %}
