[#22]: rename dd-vt-upload-auth-methods to dd-vt-upload-methods

--- a/code/tmpl/dd-vt-upload-methods.yaml.j2
+++ b/code/tmpl/dd-vt-upload-methods.yaml.j2
@@ -1,8 +1,7 @@
 ---
-# dd-vt-upload-auth-methods.yaml,
-#   rendered from dd-vt-upload-auth-methods.yaml.j2
+# dd-vt-upload-methods.yaml, rendered from dd-vt-upload-methods.yaml.j2
 #
-# dd-vt-upload-auth-methods script configuration file
+# dd-vt-upload-methods script configuration file
 #
 # author  : stefan schablowski
 # contact : stefan.schablowski@desmodyne.com
