[#22]: refactor/align conf props: secrets_folder, secrets_root

--- a/code/tmpl/dd-vt-download-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-download-secrets.yaml.j2
@@ -15,7 +15,7 @@
 path_to_sec_loc:   {{ path_to_sec_loc }}
 
 # path to folder with secrets config files, relative to path_to_sec_loc
-secrets_folder:    {{ secrets_folder }}
+secrets_dir_path:  {{ secrets_dir_path }}
 
 # name of file with keys to unseal vault, relative to path_to_sec_loc
 key_file_name:     {{ key_file_name }}
