--- a/code/tmpl/dd-vt-upload-secrets.yaml.j2
+++ b/code/tmpl/dd-vt-upload-secrets.yaml.j2
@@ -22,17 +22,17 @@ vault_host:        {{ vault_host }}
 
 
 # path to folder with secrets config files, relative to path_to_sec_loc
-secrets_folder:    {{ secrets_folder }}
+secrets_dir_path:  {{ secrets_dir_path }}
 
 # vault url path to secrets, relative to vault_host
-secrets_root:      {{ secrets_root }}
+secrets_url_path:  {{ secrets_url_path }}
 
 # secrets to be uploaded to vault
 # properties:
 #   path: path into vault where the secret will be stored,
-#         relative to vault_host/secrets_root
+#         relative to vault_host/secrets_url_path
 #   file: path to and name of file with secrets,
-#         relative to path_to_sec_loc/secrets_folder
+#         relative to path_to_sec_loc/secrets_dir_path
 secrets:           {% if secrets is defined  and secrets %}
 {%- for secret in secrets %}
 - path: {{ secret.path }}
