--- a/code/tmpl/dd-vt-gen-conf.yaml.j2
+++ b/code/tmpl/dd-vt-gen-conf.yaml.j2
@@ -15,7 +15,7 @@
 path_to_sec_loc:   {{ path_to_sec_loc }}
 
 # path to folder with secrets config files, relative to path_to_sec_loc
-secrets_folder:    {{ secrets_folder }}
+secrets_dir_path:  {{ secrets_dir_path }}
 
 # file pattern (glob) to match secrets files
 # NOTE: add quotes to ensure valid yaml for e.g. *.yaml
