--- a/code/tmpl/dd-vt-upload-methods.yaml.j2
+++ b/code/tmpl/dd-vt-upload-methods.yaml.j2
@@ -33,7 +33,9 @@ methods:           {% if methods is defined and methods %}
   {{ method.method_name }}:
     description:       {{ method.description }}
     type:              {{ method.type }}
-    enable_url_path:   {{ method.enable_url_path }}{% if method.roles_dir_path is defined and method.roles_dir_path %}
+    enable_url_path:   {{ method.enable_url_path }}{% if method.conf_url_path is defined and method.conf_url_path %}
+    conf_url_path:     {{ method.conf_url_path }}{% endif %}{% if method.conf_dir_file is defined and method.conf_dir_file %}
+    conf_dir_file:     {{ method.conf_dir_file }}{% endif %}{% if method.roles_dir_path is defined and method.roles_dir_path %}
     roles_dir_path:    {{ methods_dir_path }}/{{ method.roles_dir_path }}{% endif %}{% if method.roles_url_path is defined and method.roles_url_path %}
     roles_url_path:    {{ methods_url_path }}/{{ method.roles_url_path }}{% endif %}{% if method.users_dir_path is defined and method.users_dir_path %}
     users_dir_path:    {{ methods_dir_path }}/{{ method.users_dir_path }}{% endif %}{% if method.users_url_path is defined and method.users_url_path %}
